# sandbox

./: .gitmodules  README.md  README.org
A046109/: A046109.hs  README.org
acowley-frames-demo-1/: makefile
archimedes-pi-approximation/: archimedes-pi-approximation-quad-double.lisp  archimedes-pi-approximation.input  archimedes-pi-approximation.lisp  archimedes_pi_approximation.m
asdf-1/: module-1.asdf  package.lisp
asm-hello-1/: hello.s  makefile
aup-shell-3/: makefile
aup-shell-3/c5/: builtin.c
aup-shell-3/c6/: sh3.c
aup-shell-3/common/: macrostr.c  macrostr.incl
aup-shell-3/include/: defs.h  suvreq.h
bernoulli-e-approximation/: bernoulli-e-approximation.lisp
blank-music-sheet/: blank-music-sheet-001.ly  blank-music-sheet-002.ly  makefile
blue/: read_blue.m
boost-asio-mcast-1/: README  makefile  receiver.cc  receiver.mk  sender.cc  sender.mk  socat-mcast-client  socat-mcast-server
boost-spirit-1/: README  employee.input  makefile
boost-spirit-2/: README  makefile  skipper.cc  skipper.input
boost-spirit-3/: makefile  schedule.cc  schedule.input
boost-spirit-4/: schedule.cc  schedule.input
boost-spirit-5/: schedule.cc  schedule.input
boost-spirit-array-1/: README  makefile  myarray.cc
boost-spirit-real-parser-1/: makefile  number_list.cc
c-calling-haskell-1/: README.md  calculator.c  calculoader.c  makefile
chuck/: example-1.ck  example-2.ck
cl-echo-server/: echo-server.lisp
cl-http-server/: http-server.lisp
cl-process/: test-process-01.lisp  test-process-02.lisp  test-process-03.lisp  test-process-04.lisp
cxx-accumulators-1/: makefile  my_accumulators.cc
cxx-bitset-1/: makefile  my_bitset.cc
cxx-cv-wait-1/: makefile  my_wait.cc
cxx-ipython-embed-1/: makefile  setup.py  test_embed.py
cxx-ipython-embed-1/scripts/: test_embed
cxx-mstch-1/: README.txt  makefile  my_mstch.cc
cxx-pcap-dump-1/: README.txt  makefile  my_pcap.cc
cxx-using-1/: cxx_using.cc  makefile
cxx-xpressive-1/: makefile  my_xpressive.cc  output.txt
docker-xephyr-stumpwm/: Dockerfile  ctl  install-stumpwm.lisp
docker-xephyr-stumpwm/home/: .sbclrc  .stumpwmrc
est-1/: est1.m  my_preferences.m
euterpea-1/: euterpea-1.hs  euterpea-1.lhs  makefile
factors-1/: factors_15_3_5.mp  factors_15_5_3.mp  factors_18_3_2_3.mp  makefile  powers_27_3.mp  powers_9_3.mp  tesselation_17.mp  tesselation_18.mp
factors-2/: README  makefile
factors-2/factors/: factors.cabal  makefile  stack.yaml
factors-2/factors/app/: Main.lhs
fft/: my_dft.m
fit/: my_fit.m  my_hist.m  my_histfit.m  my_histn.m
fluadity/: bootstrap.mk
go-sha256-1/: example_sha.go  lorem_ipsum.txt  makefile
go-walk-1/: README  example_walk.go  makefile
graph03/: README
haskell-calling-c/: Eval.hs
haskell-interpreter-1/interpreter/: README.org  interpreter.cabal  makefile  stack.yaml
haskell-interpreter-1/interpreter/app/: Main.hs
haskell-interpreter-1/interpreter/src/: Lib.hs
haskell-interpreter-2/: README.org  example.cabal
haskell-interpreter-2/app/: Main.hs
haskell-interpreter-2/demo/: example.hs
haskell-interpreter-2/src/: Example.hs
haskell-optargs-1/optargs/: README.org  makefile  optargs.cabal  stack.yaml
haskell-optargs-1/optargs/app/: Main.hs
haskell-template-1/template/: LICENSE  makefile  stack.yaml  template.cabal
haskell-template-1/template/app/: Main.hs
haskell-walk-1/walk/: README.md  makefile  stack.yaml  walk.cabal
haskell-walk-1/walk/app/: Main.hs
hello-dasm-c/: hello.c  makefile
inotify-1/: inotify_test.c  makefile
inotify-c-1/demo_inotify/: makefile
inotify-c-1/inotify_dtree/: makefile
inotify-c-1/rand_dtree/: makefile
ipython-embed-1/: ipython_embed_1.py
ipython-embed-2/: ipython_embed_2.py
ipython-embed-3/: ipython_embed_3.py
ipython-embed-4/: ipython_embed_4.py
jack2-metro/: makefile
jack2-midi-dump/: makefile
kalman/: make_multilook.m  my_kalman.m  my_kalman_it.m  sim1.m  sim2.m
libevent2-1/: README.md  echo_server.cc  makefile
matrix/: hornerval1d.m  my_adjugate.m  my_adjunct.m  my_bernoulli.m  my_cofactor.m  my_fibonacci.m  my_inv.m  my_inv4.m  my_minor.m  my_phi.m  my_polyfit1d.m  my_vander1d.m  nconv.m  pron.m  sumpow.m
mlp-1/: makefile  mlp_predict.py  mlp_train.py
moonlight-sonata/: AUTHOR-moonlight-sonata  LICENSE-moonlight-sonata  makefile  moonlight1-a4.midi  moonlight2-let.midi  moonlight3-a4-1.midi  moonlight3-let-1.midi  moonlight3.mid
music-suite-1/: makefile
music-suite-1/demo1/: demo1.cabal  makefile  stack.yaml
music-suite-1/demo1/app/: Main.lhs
music-suite-2/: music-suite.sh
nanoparsec/: Nanoparsec.hs  makefile
numbers/: totient.m
org-mode-1/: README.org
plot/: freq_plot.m  my_cov.m
posix-ring-buffer/src/: posix_ring_buffer.c
pythagorean-comma-1/: pythagorean-comma-1.hs
python-inotify-1/: makefile  sample-results.txt  test_inotify.py
quickplot-house/: quickplot-house.sh
range-for-1/: Makefile.am  bootstrap.mk  configure.ac
range-for-1/src/tests/: test_foo.cc
recv-raw-eth/: makefile  recvRawEth.c
rpcalc/: configure.ac  makefile.am
rpcalc/src/: rpcalc.y  rpcalc_repl.c
rust-from-c/: bootstrap.mk  caller.c  makefile
rust-from-c/rstest/: Cargo.toml  makefile
rust-from-c/rstest/src/: lib.rs
soapy-rx-1/: Makefile.am  bootstrap.mk  configure.ac
soapy-rx-1/src/: test_rx.cpp
ssa/: pof1.m  pof2.m  ssa1.m  ssa2.m  ssa3.m  ssa4.m  ssa5.m  ssa6.m
stack-args-1/: makefile  stack-args-1.lhs  stack-args-1.sh
stl-teapots-1/: Teapot001.stl  Teapot001.stl.license  UtahHR.stl.license
submodules/: makefile
tecla-search-1/: makefile  tecla_search.c
tex-circle-of-fifths-1/: README  circle-of-fifths.tex  makefile
tex-piano-1/: README  makefile  piano.tex
tex-xpiano-1/: README  makefile  xpiano.tex
tex-xpiano-1/xpiano/: xpiano.sty
timerfd-1/: makefile  timerfd.cc
x11-opengl/: makefile
x11-opengl/src/: quad.c
