## configure.ac
## Copyright 2016 Mac Radigan
## All Rights Reserved

AC_PREREQ([2.60])
AC_INIT([sandbox], [1.0], [Mac Radigan], [sandbox])
AC_CONFIG_AUX_DIR([.])
AM_INIT_AUTOMAKE([1.10 foreign subdir-objects])
LT_INIT
AC_PROG_RANLIB

AC_LANG(C++)
AC_PROG_CXX
AC_SUBST([CC])

AC_LANG(Fortran)
AC_PROG_FC
AC_SUBST([FC])

AC_OUTPUT([Makefile])

## *EOF*
