name:                interpreter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/radiganm/sandbox#readme
author:              Mac Radigan
copyright:           2017 Mac Radigan
category:            Demo
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable interpreter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , interpreter
                     , hint >= 0.7.0
  default-language:    Haskell2010

test-suite interpreter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , interpreter
                     , hint >= 0.7.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/radiganm/sandbox
