name:                template
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/radiganm/sandbox
license:             BSD3
license-file:        LICENSE
author:              Mac Radigan
maintainer:          Mac Radigan
copyright:           2017 Mac Radigan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable template-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , template
                     , stache >= 1.1.2
                     , megaparsec >= 6.1.1
                     , aeson >= 1.1.2.0
                     , text >= 1.2.2.2
                     , syb >= 0.7
  default-language:    Haskell2010

test-suite template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , template
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/radiganm/template
