name:                walk
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/walk#readme
--license:             none
--license-file:        LICENSE
--author:              Author name here
--maintainer:          example@example.com
--copyright:           2017 Author name here
--category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable walk-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , walk
                     , unix >= 2.7.2.2
                     , MissingH >= 1.3.0.1
                     , filemanip >= 0.3.6.3
  default-language:    Haskell2010

--                     , filepath >= 1.4.1.1

test-suite walk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , walk
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/walk
